--- a/readme
+++ b/readme
@@ -1,3 +1,6 @@
-Install
+# Memory-Game-CPP
+Jogo da memória desenvolvido em C++ utilizando paralelismo e a biblioteca SDL 2.
+
+# Dependências
     libsdl2-dev
     libsdl2-image-dev
